Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignObjectNumObj.quorum
class Main
    action Main
        Number v
        v:SetValue(5.0)
        Test(v)
    end

    action Test(Object var)
        if var:GetValue() = 5.0
            output "passed"
        end
    end
end
