Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignBooleanTextObjField.quorum
class Main
    Text v
    action Main
        v:SetValue(text)
        Test(v)
    end

    action Test(boolean var)
    end
end
